Modularity: class FeedFinder gets its own file.
git-svn-id: http://plugins.svn.wordpress.org/feedwordpress/trunk@125563 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog.text
+++ b/ChangeLog.text
@@ -1,5 +1,7 @@
 FeedWordPress Change Log
 ========================
+Changes from 2009.0612 to Trunk
+-------------------------------
 
 Changes from 2008.1214 to 2009.0612
 -----------------------------------
