UI: money-grubbing little PayPal donate box with options to dismiss temporarily or permanently.
git-svn-id: http://plugins.svn.wordpress.org/feedwordpress/trunk@144021 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog.text
+++ b/ChangeLog.text
@@ -1,5 +1,11 @@
 FeedWordPress Change Log
 ========================
+Changes from 2009.0707 to Trunk
+-------------------------------
+*	BUGIFX: SILENT FAILURE OF "SYNDICATE" BUTTON FIXED 
+
+*	BUGFIX: MagpieRSS "ILLEGAL OFFSET TYPE" ERROR MESSAGE FIXED
+
 Changes from 2009.0618 to 2009.0707
 -----------------------------------
 *	BUGFIX: WORDPRESS 2.8 AJAX COMPATIBILITY ISSUES RESOLVED (blank or
