SyndicatedPost::isTaggedAs utility function for filters
git-svn-id: http://plugins.svn.wordpress.org/feedwordpress/trunk@172464 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/ChangeLog.text
+++ b/ChangeLog.text
@@ -2,6 +2,10 @@ FeedWordPress Change Log
 ========================
 Changes from 2009.0707 to Trunk
 -------------------------------
+*	NEW INTERFACE HOOKS
+
+*	FILTER API: SyndicatedPost::isTaggedAs
+
 *	BUGIFX: SILENT FAILURE OF "SYNDICATE" BUTTON FIXED 
 
 *	BUGFIX: MagpieRSS "ILLEGAL OFFSET TYPE" ERROR MESSAGE FIXED
