--- a/ChangeLog.text
+++ b/ChangeLog.text
@@ -2,12 +2,17 @@ FeedWordPress Change Log
 ========================
 Changes from 2009.0707 to Trunk
 -------------------------------
-*	WORDPRESS 2.9.1 COMPATIBILITY: This release has been tested for
-	compatibility with the newly released WordPress 2.9 and 2.9.1. Changes
-	in the user interface JavaScript between WordPress 2.8.x and WordPress
-	2.9 caused the tag box interface element to break in the
+*	WORDPRESS 2.9.2 COMPATIBILITY: This release has been tested for
+	compatibility with the newly released WordPress 2.9, 2.9.1, and 2.9.2.
+	Changes in the user interface JavaScript between WordPress 2.8.x and
+	WordPress 2.9 caused the tag box interface element to break in the
 	Syndication --> Categories & Tags settings page; this breakage has been
 	fixed.
+
+*	PHP 5.3 COMPATIBILITY: This release eliminates a few potential conflicts
+	with new idioms and reserved words introduced in PHP 5.3, including the
+	new "namespace" construct and the deprecation of assignments by
+	reference from "new" constructors.
 
 *	FULL-TEXT "EXCERPTS" NOW PROPERLY SHORTENED. Based on a straightforward
 	reading of the existing RSS specs, it's reasonable for the
