--- a/ChangeLog.text
+++ b/ChangeLog.text
@@ -1,7 +1,10 @@
 FeedWordPress Change Log
 ========================
-Changes from 2009.0707 to Trunk
+Changes from 2010.0528 to Trunk
 -------------------------------
+
+Changes from 2009.0707 to 2010.0528
+-----------------------------------
 
 ### Compatibility ###
 
@@ -185,7 +188,7 @@ Changes from 2009.0707 to Trunk
 
 *	MINOR BUGFIXES: This release includes a number of fixes to minor bugs
 	and compatibility issues, including: silent failures of the "Syndicate"
-	button, "Illegal Offset Type" error messages from MagpieRSS, 
+	button, "Illegal Offset Type" error messages from MagpieRSS, and others.
 	
 
 Changes from 2009.0618 to 2009.0707
